--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,6 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +23,7 @@
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <a href="" class="logo"> <span class="accent">Web</span>Studio </a>
 
@@ -36,137 +40,141 @@
     </header>
     <main>
       <section>
-        <ul class="site-nav-portfolio">
-          <li><button type="button" class="button">Усі</button></li>
-          <li><button type="button" class="button">Веб-сайти</button></li>
-          <li><button type="button" class="button">Додатки</button></li>
-          <li><button type="button" class="button">Дизайн</button></li>
-          <li><button type="button" class="button">Маркетинг</button></li>
-        </ul>
-        <ul class="portfolio">
-          <li>
-            <a href="">
-              <img
-                src="./image/tehno.jpg"
-                alt="три спеціаліста на моніторі"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/poster.jpg"
-                alt="чоловіки грають в баскетбол"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/restoran.jpg"
-                alt="риба під логотипом"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p>Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/proekt-prime.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/proekt-box.jpg"
-                alt="дві коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p>Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/inspiration.jpg"
-                alt="монитор"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/vidannya.jpg"
-                alt="розгорнута книга"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/proekt-lab.jpg"
-                alt="бірка з надписом"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./image/growing.jpg"
-                alt=" хтось працює на ноутбуці"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p>Додаток</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="site-nav-portfolio">
+            <li><button type="button" class="button">Усі</button></li>
+            <li><button type="button" class="button">Веб-сайти</button></li>
+            <li><button type="button" class="button">Додатки</button></li>
+            <li><button type="button" class="button">Дизайн</button></li>
+            <li><button type="button" class="button">Маркетинг</button></li>
+          </ul>
+        </div>
+          <ul class="portfolio">
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/tehno.jpg"
+                  alt="три спеціаліста на моніторі"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/poster.jpg"
+                  alt="чоловіки грають в баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/restoran.jpg"
+                  alt="риба під логотипом"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/proekt-prime.jpg"
+                  alt="навушники"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Проєкт Prime</h2>
+                <p>Маркетинг</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/proekt-box.jpg"
+                  alt="дві коробки"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Проєкт Boxes</h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/inspiration.jpg"
+                  alt="монитор"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/vidannya.jpg"
+                  alt="розгорнута книга"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Видання Limited Edition</h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/proekt-lab.jpg"
+                  alt="бірка з надписом"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Проєкт LAB</h2>
+                <p>Маркетинг</p>
+              </a>
+            </li>
+            <li class="card">
+              <a href="">
+                <img
+                  src="./image/growing.jpg"
+                  alt=" хтось працює на ноутбуці"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p>Додаток</p>
+              </a>
+            </li>
+          </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="index.html" class="logo">
-        <span class="accent">Web</span>Studio
-      </a>
+      <div class="container">
+        <a href="index.html" class="logo">
+          <span class="accent">Web</span>Studio
+        </a>
 
-      <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <ul class="address-links">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+        <address>
+          <p>м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="address-links">
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
-  </body>
+  </body> 
 </html>
