Зробив стилі header i footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,7 +28,7 @@
     <header class="header">
       <div class="container">
         <div class="header-content">
-          <nav>
+          <nav class="nav">
             <a href="index.html" class="logo">
               <span class="accent">Web</span>Studio
             </a>
@@ -63,8 +65,8 @@
             <li>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p>
-                Завдання організації, особливо рамки і місце навчання кадрів тягне
-                у себе.
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
               </p>
             </li>
             <li>
@@ -76,9 +78,9 @@
             <li>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p>
-                Значимість цих проблем настільки очевидна, що реалізація планових
-                завдань.
-            </p>
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
             </li>
           </ul>
         </div>
@@ -164,17 +166,19 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo">
-          <span class="accent">Web</span>Studio
-        </a>
+        <div class="footer-content">
+          <a href="index.html" class="logo">
+            <span class="accent">Web</span>Studio
+          </a>
 
-        <address>
-          <p>м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="address-links">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-          </ul>
-        </address>
+          <address>
+            <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="address-links">
+              <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
