--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <style>
-      body {
-        font-family: Roboto, sans-serif;
-      }
-    </style>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Портфоліо</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -21,23 +16,35 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
+  <style>
+    body {
+      font-family: Roboto, sans-serif;
+    }
+  </style>
   </head>
   <body>
     <header class="header">
-      <nav>
-        <a href="" class="logo"> <span class="accent">Web</span>Studio </a>
-
-        <ul class="site-nav">
-          <li><a href="index.html" class="link">Студія</a></li>
-          <li><a href="./Portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="site-contacts">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      <div class="container">
+        <div class="header-content">
+          <nav class="nav">
+            <a href="index.html" class="logo">
+              <span class="accent">Web</span>Studio 
+            </a>
+            
+            <ul class="site-nav">
+              <li><a href="index.html" class="link">Студія</a></li>
+              <li><a href="./Portfolio.html" class="link current">Портфоліо</a></li>
+              <li><a href="">Контакти</a></li>
+            </ul>
+          </nav>
+          <ul class="site-contacts">
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
+    <hr></hr>
     <main>
       <section>
         <div class="container">
@@ -49,132 +56,134 @@
             <li><button type="button" class="button">Маркетинг</button></li>
           </ul>
         </div>
-          <ul class="portfolio">
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/tehno.jpg"
-                  alt="три спеціаліста на моніторі"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p>Веб-сайт</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/poster.jpg"
-                  alt="чоловіки грають в баскетбол"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/restoran.jpg"
-                  alt="риба під логотипом"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p>Додаток</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/proekt-prime.jpg"
-                  alt="навушники"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Проєкт Prime</h2>
-                <p>Маркетинг</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/proekt-box.jpg"
-                  alt="дві коробки"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Проєкт Boxes</h2>
-                <p>Додаток</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/inspiration.jpg"
-                  alt="монитор"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/vidannya.jpg"
-                  alt="розгорнута книга"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Видання Limited Edition</h2>
-                <p>Дизайн</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/proekt-lab.jpg"
-                  alt="бірка з надписом"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Проєкт LAB</h2>
-                <p>Маркетинг</p>
-              </a>
-            </li>
-            <li class="card">
-              <a href="">
-                <img
-                  src="./image/growing.jpg"
-                  alt=" хтось працює на ноутбуці"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p>Додаток</p>
-              </a>
-            </li>
-          </ul>
+        <ul class="portfolio">
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/tehno.jpg"
+                alt="три спеціаліста на моніторі"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/poster.jpg"
+                alt="чоловіки грають в баскетбол"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/restoran.jpg"
+                alt="риба під логотипом"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/proekt-prime.jpg"
+                alt="навушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Проєкт Prime</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/proekt-box.jpg"
+                alt="дві коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Проєкт Boxes</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/inspiration.jpg"
+                alt="монитор"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/vidannya.jpg"
+                alt="розгорнута книга"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Видання Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/proekt-lab.jpg"
+                alt="бірка з надписом"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Проєкт LAB</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img
+                src="./image/growing.jpg"
+                alt=" хтось працює на ноутбуці"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-title">Growing Business</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo">
-          <span class="accent">Web</span>Studio
-        </a>
+        <div class="footer-content">
+          <a href="index.html" class="logo">
+            <span class="accent">Web</span>Studio
+          </a>
 
-        <address>
-          <p>м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="address-links">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-          </ul>
-        </address>
+          <address>
+            <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="address-links">
+              <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
-  </body> 
+  </body>
 </html>
