--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header-content">
-          <nav class="nav">
-            <a href="index.html" class="logo">
-              <span class="accent">Web</span>Studio
-            </a>
+      <div class="container header-content">
+        <nav class="nav">
+          <a href="index.html" class="logo">
+            <span class="accent">Web</span>Studio
+          </a>
 
-            <ul class="site-nav">
-              <li><a href="" class="link current">Студія</a></li>
-              <li><a href="./Portfolio.html">Портфоліо</a></li>
-              <li><a href="">Контакти</a></li>
-            </ul>
-          </nav>
-          <ul class="site-contacts">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <ul class="site-nav">
+            <li><a href="" class="link current">Студія</a></li>
+            <li><a href="./Portfolio.html">Портфоліо</a></li>
+            <li><a href="">Контакти</a></li>
           </ul>
-        </div>
+        </nav>
+        <ul class="site-contacts">
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-        <button type="button" class="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+          <button type="button" class="button hero-button">Замовити послугу</button>
+        </div>
       </section>
       <section class="section">
         <div class="container">
-          <h2 hidden>Особливості</h2>
+          <h2 class="visually-hidden">Особливості</h2>
           <ul class="Features">
             <li>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -85,7 +85,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section about">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="section-img">
@@ -116,7 +116,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-command">
+      <section class="section command">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="devs">
