--- a/index.html
+++ b/index.html
@@ -165,20 +165,18 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <a href="index.html" class="logo">
-            <span class="accent">Web</span>Studio
-          </a>
+      <div class="container footer-content">
+        <a href="index.html" class="logo">
+          <span class="accent">Web</span>Studio
+        </a>
 
-          <address>
-            <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="address-links">
-              <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-              <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-          </address>
-        </div>
+        <address>
+          <p class="address-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="address-links">
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
       </div>
     </footer>
   </body>
