--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-title">Ігор Дем'яненко</h3>
-              <p lang="en">Product Designer</p>
+              <div class="command-text">
+                <h3 class="command-title">Ігор Дем'яненко</h3>
+                <p lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="dev">
               <img
@@ -137,8 +139,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-title">Ольга Рєпіна</h3>
-              <p lang="en">Frontend Developer</p>
+              <div class="command-text">
+                <h3 class="command-title">Ольга Рєпіна</h3>
+                <p lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="dev">
               <img
@@ -147,8 +151,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-title">Микола Тарасов</h3>
-              <p lang="en">Marketing</p>
+              <div class="command-text">
+                <h3 class="command-title">Микола Тарасов</h3>
+                <p lang="en">Marketing</p>
+              </div>
             </li>
             <li class="dev">
               <img
@@ -157,8 +163,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-title">Михайло Єрмаков</h3>
-              <p lang="en">UI Designer</p>
+              <div class="command-text">
+                <h3 class="command-title">Михайло Єрмаков</h3>
+                <p lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
