--- a/Portfolio.html
+++ b/Portfolio.html
@@ -47,7 +47,7 @@
     <main>
       <section>
         <div class="container">
-          <ul class="site-nav-portfolio">
+          <ul class="section site-nav-portfolio">
             <li><button type="button" class="button">Усі</button></li>
             <li><button type="button" class="button">Веб-сайти</button></li>
             <li><button type="button" class="button">Додатки</button></li>
@@ -55,7 +55,7 @@
             <li><button type="button" class="button">Маркетинг</button></li>
           </ul>
         </div>
-        <ul class="portfolio">
+        <ul class="section portfolio">
           <li class="card">
             <a href="">
               <img
