--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="Features">
+          <ul class="features">
             <li>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p>
